test

src/AOC2022/Day23.hs:30:42: error:
    • Data constructor not in scope: P2 :: t2 -> t3 -> V2 Int
    • Perhaps you meant ‘V2’ (imported from Linear.V2)
   |
30 |        | not $ any (`Set.member` elves) [P2 (-1) i | i <- [-1..1]] -> elf - P2 0 1
   |                                          ^^

src/AOC2022/Day23.hs:30:77: error:
    • Data constructor not in scope: P2 :: t0 -> t1 -> V2 Int
    • Perhaps you meant ‘V2’ (imported from Linear.V2)
   |
30 |        | not $ any (`Set.member` elves) [P2 (-1) i | i <- [-1..1]] -> elf - P2 0 1
   |                                                                             ^^

src/AOC2022/Day23.hs:35:21: error:
    • Variable not in scope: solve' :: Char -> HashSet (V2 Int) -> b0
    • Perhaps you meant ‘solve’ (line 35)
   |
35 | solve = aoc parser (solve' 'S') (solve' 'a')
   |                     ^^^^^^

src/AOC2022/Day23.hs:35:34: error:
    • Variable not in scope: solve' :: Char -> HashSet (V2 Int) -> c0
    • Perhaps you meant ‘solve’ (line 35)
   |
35 | solve = aoc parser (solve' 'S') (solve' 'a')
   |                                  ^^^^^^
